--- a/index.html
+++ b/index.html
@@ -1,125 +1,259 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>TEAMROHITOFFICAL45_LIVE</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="//content.jwplatform.com/libraries/SAHhwvZq.js"></script>
-  <style>
-    body {
-      margin: 0;
-      background: black;
-    }
-    .jwplayer {
-      position: absolute !important;
-    }
-    .jwplayer.jw-flag-aspect-mode {
-      min-height: 100%;
-      max-height: 100%;
-    }
-    /* Premium Telegram Popup */
-    .popup {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 280px;
-      height: 280px;
-      background: rgba(20, 20, 20, 0.9);
-      padding: 20px;
-      border-radius: 15px;
-      text-align: center;
-      box-shadow: 0px 0px 20px rgba(255, 0, 0, 0.5);
-      color: white;
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      backdrop-filter: blur(10px);
-      border: 2px solid rgba(255, 255, 255, 0.2);
-    }
-    .popup h2 {
-      color: yellow;
-      font-size: 18px;
-      margin-bottom: 10px;
-    }
-    .popup p {
-      font-size: 14px;
-      margin-bottom: 20px;
-    }
-    /* Premium Button Styling */
-    .popup button {
-      width: 90%;
-      padding: 12px;
-      font-size: 15px;
-      font-weight: bold;
-      cursor: pointer;
-      border: 3px solid rgba(255, 255, 255, 0.3);
-      border-radius: 8px;
-      transition: all 0.3s ease-in-out;
-      text-transform: uppercase;
-      box-shadow: 0px 5px 0px rgba(0, 0, 0, 0.3);
-    }
-    /* Premium Glowing Red Button */
-    .join-btn {
-      background: linear-gradient(45deg, #ff0000, #cc0000);
-      color: white;
-      box-shadow: 0 0 10px red;
-      animation: glow 1s infinite alternate;
-    }
-    @keyframes glow {
-      0% { box-shadow: 0 0 10px red; }
-      100% { box-shadow: 0 0 20px red; }
-    }
-    .join-btn:hover {
-      background: linear-gradient(45deg, #cc0000, #990000);
-      transform: scale(1.05);
-    }
-    /* Premium Gray Button */
-    .joined-btn {
-      background: linear-gradient(45deg, #444, #333);
-      color: white;
-      margin-top: 10px;
-    }
-    .joined-btn:hover {
-      background: linear-gradient(45deg, #555, #444);
-      transform: scale(1.05);
-    }
-  </style>
-</head>
-<body>
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="./style.css">
+      <title>Tata IPL Live</title>
+    <style>
+        #popup {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
 
-  <div id="jwplayerDiv"></div>
+        .popup-content {
+            background-color: #222;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            width: 300px;
+        }
 
-  <!-- Premium Telegram Popup -->
-  <div class="popup" id="telegramPopup">
-    <h2>Support Us!</h2>
-    <p>Join our Telegram channel <b>@teamrohitoffical45</b> for more updates.</p>
-    <button class="join-btn" onclick="window.open('https://t.me/+Abr6OELq5KZkZjNl', '_blank'); closePopup();">Join Now and Support Us</button>
-    <button class="joined-btn" onclick="closePopup()">Already Joined</button>
+        .popup-content h2 {
+            margin: 0 0 10px;
+            color: #00aaff;
+        }
+
+        .popup-content p {
+            margin: 0 0 20px;
+        }
+
+        .popup-content button {
+            width: 100%;
+            padding: 10px;
+            margin-top: 10px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        .popup-content .join-btn {
+            background-color: #008fd6;
+            color: white;
+        }
+
+        .popup-content .close-btn {
+            background-color: #555;
+            color: white;
+        }
+                #popup .popup-content {
+            border: 3px solid #5CABFF;
+            box-shadow: 0px 0px 15px rgba(92, 171, 255, 0.8);
+        }
+    </style>
+
+  </head>
+  <body>
+  <center>
+      <img src="https://i.ibb.co/mr3mypnF/tata-ipl-logo-png-white-by-harshmore7781-dezxlwr-pre.png" alt="IPL 2025" class="logo">
+
+
+      <div class="iframe-container" id="iframeContainer"></div>
+      <div class="container">
+          <div id="title" class="match-title">IPL Live Streaming</div>
+          <div id="subtitle" class="match-subtitle">Select a channel to start watching</div>
+      </div>
+      <div class="container">
+          <strong>Channels</strong><br><select id="channelDropdown"></select>
+      </div>
+      <div class="container telegram-container">
+          <a class="tg-button" href="https://t.me/+lkbpBqFd0FljNzJl" target="_blank">
+              <img src="https://telegram.org/img/t_logo.png" alt="Telegram Logo">
+              Join Telegram
+          </a>
+      </div>
+    <div id="ad-container" class="container"></div>
+
+
+    <style>
+        /* CSS for the ad container */
+        #ad-container {
+            margin: 20px auto;
+            text-align: center;
+            width: 95vw; /* Full width on smaller devices */
+        }
+
+        #ad-container img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Style for the button */
+        #ad-container .ad-btn {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 10px 20px;
+            background-color: #ff6b6b; /* Light red */
+            color: #000; /* Black text */
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 16px;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+        }
+
+        #ad-container .ad-btn:hover {
+            background-color: #ff4c4c; /* Slightly darker red on hover */
+        }
+
+        /* Media query for larger devices */
+        @media (min-width: 768px) {
+            #ad-container {
+                width: 75vw; /* 75% width on larger devices */
+            }
+        }
+    </style>
+
+
+
+    <script>
+        // Function to get the query parameter from the URL
+        function getQueryParam(param) {
+            const urlParams = new URLSearchParams(window.location.search);
+            return urlParams.get(param);
+        }
+
+        // Fetch the JSON data
+        fetch('https://binge-api.vercel.app/ipl.json')
+            .then(response => response.json())
+            .then(data => {
+                const matchId = getQueryParam('id'); // Get the 'id' parameter from the URL
+                const match = data.matches.find(match => match.id === matchId); // Find the match with the given ID
+
+                if (match) {
+                    const adContainer = document.getElementById('ad-container');
+                    adContainer.innerHTML = `
+                        <a href="${match.url}" target="_blank">
+                            <img src="${match.poster}" alt="${match.team1} vs ${match.team2}">
+                        </a>
+                        <a href="https://t.me/binge_adsbot" class="ad-btn" target="_blank">Place your ad here</a>
+                    `;
+                } else {
+                    console.log('Match not found');
+                }
+            })
+            .catch(error => console.error('Error fetching JSON:', error));
+    </script>
+
+
+</center>
+      <script src="./stream.js"></script>
+
+          <script src="./info.js"></script>
+<script>
+async function checkMatchAccess() {
+  // Step 1: Extract the "id" parameter from the URL.
+  const urlParams = new URLSearchParams(window.location.search);
+  const matchId = urlParams.get("id");
+
+  if (!matchId) {
+    window.location.href = "https://t.me/Axtream_Bingewav";
+    return;
+  }
+
+  try {
+    // Step 2: Fetch the match data from the JSON file.
+    const response = await fetch("https://binge-api.vercel.app/ipl.json");
+    const data = await response.json();
+    const match = data.matches.find(m => m.id === matchId);
+    if (!match) {
+      window.location.href = "https://t.me/Axtream_Bingewav";
+      return;
+    }
+
+    // Step 3: Build the next day's cutoff time from the match date.
+    // The JSON date is in "DD-MM-YYYY". We create an IST-based Date object.
+    const [day, month, year] = match.date.split("-").map(Number);
+    
+    // Create a Date object in IST
+    let matchDateIST = new Date(year, month - 1, day, 4, 0, 0); // Next day 4:00 AM IST
+
+    // Add 1 day to move to next day's 4:00 AM
+    matchDateIST.setDate(matchDateIST.getDate() + 1);
+
+    // Step 4: Get the current IST time locally
+    let nowIST = new Date().toLocaleString("en-US", { timeZone: "Asia/Kolkata" });
+    nowIST = new Date(nowIST);
+
+    console.log("Current IST:", nowIST);
+    console.log("Cutoff (Next Day 04:00 AM IST):", matchDateIST);
+
+    // Step 5: Compare and redirect if the current time is beyond cutoff.
+    if (nowIST > matchDateIST) {
+      window.location.href = "https://t.me/Axtream_Bingewav";
+    }
+
+  } catch (error) {
+    console.error("Error fetching data:", error);
+    window.location.href = "https://t.me/Axtream_Bingewav"; // Redirect in case of errors
+  }
+}
+
+checkMatchAccess();
+</script>
+
+
+  <div id="popup" class="popup">
+    <div class="popup-content">
+      <h2>Support Us!</h2>
+      <p>Join Our Telegram Channel @TEAMROHITOFFICAL45</p>
+      <button class="join-btn" onclick="window.open('https://t.me/+lkbpBqFd0FljNzJl', '_blank')">Join Now</button>
+      <button class="close-btn" onclick="closePopup()">Already Joined</button>
+    </div>
   </div>
 
-  <script>
-    jwplayer("jwplayerDiv").setup({
-      file: "https://astro-cricket-iota.vercel.app/2504/default_ott.mpd",
-      type: "dash",
-      autostart: true,
-      stretching: "uniform",
-      width: "100%",
-      drm: {
-        clearkey: {
-          keyId: "03c2e0af2f8159f9f0ce9b5dbc865f10",
-          key: "cd84ed136b0cc71f8ab8cd4d4f6a2e4c"
+<script>
+        // Show the alert
+        if (confirm("Join Our Telegram Channel @TEAMROHITOFFICAL45")) {
+            // Redirect to the Telegram channel if 'OK' is clicked
+            window.location.href = "https://t.me/+lkbpBqFd0FljNzJl";
+        } else {
+            // Close the alert if 'Cancel' is clicked (do nothing)
         }
-      }
-    });
+         // Close popup function
+ function closePopup() {
+    const popup = document.getElementById('popup');
+    popup.style.display = 'none';
+  }
+</script>
+<div class="container">
+<center>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'f987b8d0a45365a126993d3430a5f0e5',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+<script type="text/javascript" src="//www.highperformanceformat.com/f987b8d0a45365a126993d3430a5f0e5/invoke.js"></script>
+</center>
+</div>
+</script>
 
-    function closePopup() {
-      document.getElementById("telegramPopup").style.display = "none";
-    }
-  </script>
 
-</body>
-</html>
+  </body>
+  </html>
