--- a/index.html
+++ b/index.html
@@ -1,110 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Teamrohitoffical45_live</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: 'Arial', sans-serif;
-      background: linear-gradient(135deg, #242424, #3b5998);
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      text-align: center;
-    }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Teamrohitoffical45_live</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #242424, #3b5998);
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      text-align: center;
+    }
 
-    .loading-message {
-      font-size: 18px;
-      font-weight: bold;
-      color: #ffcc00;
-      margin: 10px 0;
-      padding: 10px 20px;
-      border-radius: 10px;
-      background: rgba(255, 255, 255, 0.1);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      box-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00, 0 0 30px #ffcc00;
-      animation: glow 1.5s infinite alternate;
-    }
+    .loading-message {
+      font-size: 18px;
+      font-weight: bold;
+      color: #ffcc00;
+      margin-bottom: 10px;
+      padding: 10px 20px;
+      border-radius: 10px;
+      background: rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      box-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00, 0 0 30px #ffcc00;
+      animation: glow 1.5s infinite alternate;
+    }
 
-    @keyframes glow {
-      0% { box-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00, 0 0 30px #ffcc00; }
-      100% { box-shadow: 0 0 15px #ffcc00, 0 0 25px #ffcc00, 0 0 35px #ffcc00; }
-    }
+    @keyframes glow {
+      0% { box-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00, 0 0 30px #ffcc00; }
+      100% { box-shadow: 0 0 15px #ffcc00, 0 0 25px #ffcc00, 0 0 35px #ffcc00; }
+    }
 
-    .player-container {
-      flex: 1;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 10px 0;
-    }
+    .player-container {
+      width: 95%;
+      max-width: 1200px;
+      margin: 20px auto;
+      box-shadow: 0 6px 25px rgba(0, 0, 0, 0.4);
+      border-radius: 15px;
+      overflow: hidden;
+      background: #000;
+    }
 
-    .player-container iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
+    .player-container iframe {
+      border-radius: 15px;
+      width: 100%;
+      height: 100%;
+    }
 
-    .join-telegram-container {
-      margin: 20px 0;
-    }
+    .join-telegram-container {
+      margin-top: 20px;
+    }
 
-    .join-telegram-btn {
-      padding: 10px 20px;
-      font-size: 16px;
-      font-weight: bold;
-      color: white;
-      background-color: #008fd6;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-    }
+    .join-telegram-btn {
+      padding: 10px 20px;
+      font-size: 16px;
+      font-weight: bold;
+      color: white;
+      background-color: #008fd6;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+    }
 
-    .join-telegram-btn:hover {
-      background-color: #006bb3;
-    }
-  </style>
+    .join-telegram-btn:hover {
+      background-color: #006bb3;
+    }
+  </style>
 </head>
 <body>
 
-  <div class="loading-message">Share The Links With Your Friends</div>
+  <div class="loading-message">Share The Links With Your Friends</div>
 
-  <div class="player-container">
-    <iframe id="contentFrame"
-      sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation"
-      allow="encrypted-media"
-      allowfullscreen
-      scrolling="no">
-    </iframe>
-  </div>
+  <div class="player-container">
+    <div style="padding:56.25% 0 0 0;position:relative;">
+      <iframe id="contentFrame"
+              sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation"
+              frameborder="0"
+              allow="encrypted-media"
+              allowfullscreen
+              scrolling="no"
+              style="position:absolute;top:0;left:0;width:100%;height:100%;">
+      </iframe>
+    </div>
+  </div>
 
-  <div class="join-telegram-container">
-    <button class="join-telegram-btn" onclick="window.open('https://t.me/+lkbpBqFd0FljNzJl', '_blank')">
-      Join Telegram Channel
-    </button>
-  </div>
+  <div class="join-telegram-container">
+    <button class="join-telegram-btn" onclick="window.open('https://t.me/+lkbpBqFd0FljNzJl', '_blank')">
+      Join Telegram Channel
+    </button>
+  </div>
 
-  <script>
-    const urlParams = new URLSearchParams(window.location.search);
-    const videoId = urlParams.get('id');
-    const fallbackId = "235";
-    const iframeSrc = `https://tvgo.neocities.org/APPTV/tata?id=${videoId || fallbackId}&key=aphjjjsjij&name=DW`;
-    document.getElementById('contentFrame').src = iframeSrc;
-  </script>
+  <script>
+    // Get the "id" query parameter from the URL
+    const urlParams = new URLSearchParams(window.location.search);
+    const videoId = urlParams.get('id');
 
-  <script>
-    if (confirm("Join Our Telegram Channel @teamrohitofficial45")) {
-      window.open("https://t.me/+IhSW51QysxU3NzY1", '_blank');
-    }
-  </script>
+    // Optional fallback if no id is provided
+    const fallbackId = "235";
+
+    // Build the iframe src dynamically
+    const iframeSrc = `https://tvgo.neocities.org/APPTV/tata?id=${videoId || fallbackId}&key=aphjjjsjij&name=DW`;
+
+    // Set the iframe source
+    document.getElementById('contentFrame').src = iframeSrc;
+  </script>
+
+  <script>
+    if (confirm("Join Our Telegram Channel @teamrohitofficial45")) {
+      window.open("https://t.me/+IhSW51QysxU3NzY1", '_blank');
+    }
+  </script>
 
 </body>
 </html>
